# NeonPaper

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cpp  main.qml
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
docs/: architecture.md  mvp-scope.md
src/neonpaper/: main.cpp
src/neonpaperctl/: main.cpp
